update mcj management

--- a/mcj-management.com/index.html
+++ b/mcj-management.com/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <!--
-	Phantom by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+    Phantom by HTML5 UP
+    html5up.net | @ajlkn
+    Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
 
@@ -25,64 +25,40 @@
             <div class="inner">
                 <!-- Logo -->
                 <a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">MCJ Management</span>
-								</a>
+                   <span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">MCJ Management</span>
+               </a>
             </div>
         </header>
         <!-- Main -->
         <div id="main">
             <div class="inner">
                 <!-- <header>
-								<h1>We manage quality, up-and-coming artists.</h1>
-								<p></p> 
-							</header>-->
+                                <h1>We manage quality, up-and-coming artists.</h1>
+                                <p></p> 
+                            </header>-->
                 <section class="tiles">
                     <article class="style3">
                         <span class="image">
-										<img src="images/kuhr.png" alt="" />
-									</span>
+                                      <img src="images/Kuur.jpg" alt="" />
+                                  </span>
                         <a href="https://soundcloud.com/kuur">
                             <h2>Kuur</h2>
                         </a>
                     </article>
                     <article class="style4">
                         <span class="image">
-										<img src="images/mightnot.jpg" alt="" />
-									</span>
-                        <a href="https://soundcloud.com/itsmightnot">
-                            <h2>Might Not</h2>
+                                  <img src="images/Arcando.jpg" alt="" />
+                              </span>
+                        <a href="https://soundcloud.com/arcando-official">
+                            <h2>Arcando</h2>
                         </a>
                     </article>
                     <article class="style5">
                         <span class="image">
-										<img src="images/yv.png" alt="" />
-									</span>
-                        <a href="https://soundcloud.com/itsyandv">
-                            <h2>Y&V</h2>
-                        </a>
-                    </article>
-                    <article class="style7">
-                        <span class="image">
-										<img src="images/anden.jpg" alt="" />
-									</span>
-                        <a href="https://soundcloud.com/weareanden">
-                            <h2>Anden</h2>
-                        </a>
-                    </article>
-                    <article class="style6">
-                        <span class="image">
-										<img src="images/beaucollins.jpg" alt="" />
-									</span>
-                        <a href="https://soundcloud.com/beaucollins">
-                            <h2>Beau Collins</h2>
-                        </a>
-                    </article>
-                    <article class="style4">
-                        <span class="image">
-										<img src="images/rivero.jpg" alt="" />
-									</span>
-                        <a href="https://soundcloud.com/officialrivero">
-                            <h2>Rivero</h2>
+                              <img src="images/neutral..jpg" alt="" />
+                          </span>
+                        <a href="https://soundcloud.com/neutralmakesmusic">
+                            <h2>neutral.</h2>
                         </a>
                     </article>
                 </section>
@@ -103,18 +79,18 @@
                     </form>
                 </section>
                 <!--<section>
-								<h2>Follow</h2>
-								<ul class="icons">
-									<li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon style2 fa-dribbble"><span class="label">Dribbble</span></a></li>
-									<li><a href="#" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon style2 fa-500px"><span class="label">500px</span></a></li>
-									<li><a href="#" class="icon style2 fa-phone"><span class="label">Phone</span></a></li>
-									<li><a href="#" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
-								</ul>
-							</section>-->
+                                <h2>Follow</h2>
+                                <ul class="icons">
+                                    <li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
+                                    <li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
+                                    <li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
+                                    <li><a href="#" class="icon style2 fa-dribbble"><span class="label">Dribbble</span></a></li>
+                                    <li><a href="#" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
+                                    <li><a href="#" class="icon style2 fa-500px"><span class="label">500px</span></a></li>
+                                    <li><a href="#" class="icon style2 fa-phone"><span class="label">Phone</span></a></li>
+                                    <li><a href="#" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
+                                </ul>
+                            </section>-->
                 <ul class="copyright">
                     <li>&copy; Seekuh Industries. All rights reserved</li>
                     <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
