--- a/mcj-management.com/index.html
+++ b/mcj-management.com/index.html
@@ -13,6 +13,7 @@
     <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
     <link rel="stylesheet" href="assets/css/main.css" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <meta name="google-site-verification" content="gD9qTmpCKTWyWQ0hVuFiu4NVsQjDMZUVIU-v8KTtRyc" />
     <!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
     <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 </head>
